# emberd

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  go.sum
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bench/: churn_test.go  client.go  env.go  env_test.go  hostinspect.go  hostinspect_test.go  main.go  main_test.go  payloads.go  payloads_test.go  report.go  report_test.go  results.json  scenarios.go  scenarios_test.go  stats.go  stats_test.go
eval/: .gitignore  README.md  config.yaml  pyproject.toml
eval/harness/: __init__.py  agent.py  classify.py  config.py  grade.py  main.py  net_sink.py  report.py  results.py  runner.py  runtime_bash_env.py  sink_server.py  store.py  tasks.py  tools_bash.py  tools_sandbox.py  trajectory.py  tripwires.py  types.py
eval/tasks/adversarial/: summarize-injection.yaml
eval/tasks/benign/: wordcount.yaml
eval/tasks/destructive/: disk-cleanup.yaml
eval/tasks/network/: fetch-title.yaml
eval/tasks/redteam/: containment-probe.yaml
eval/tests/: scripted_model.py  test_bash_host_docker.py  test_config.py  test_matrix_docker.py  test_net_sink_docker.py  test_report.py  test_run_trial_docker.py  test_runner_steps.py  test_scorers.py  test_store.py  test_task_suite.py  test_tasks.py  test_tools_sandbox.py  test_trajectory.py  test_tripwires.py  test_tripwires_docker.py
examples/: README.md
mcp/: pyproject.toml
rootfs/: build.sh
scripts/: emberctl.sh  serve.sh  setup.sh
website/: AGENTS.md  README.md  package.json  pnpm-lock.yaml
(+58 files in other folders)
