[project]
name = "emberd-eval"
version = "0.1.0"
description = "Eval harness comparing an AI agent on raw shell vs the emberd sandbox runtime."
requires-python = ">=3.11,<3.13"
dependencies = [
    "pyyaml>=6.0",
    "httpx>=0.27",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = false
